# SocketChatSystem

./: BuildForWindows.md  CMakeLists.txt  NEED.md  PLAN.md  README.md
src/: Client.cpp  Protocol.h  SafeQueue.h  Server.cpp  client_gui.cpp  file_dialog.h  file_dialog.mm
